syntax = "proto3";
option go_package = "./;proto";

service ClientSide {
  //一个ClientSideHello的方法
  rpc ClientSideHello (stream ClientSideRequest) returns (ClientSideResp) {}
}

message ClientSideRequest{
  string name = 1;
}

message ClientSideResp{
  string message = 1;
}