syntax = "proto3";
option go_package = ".;proto";
package gateway;
import "google/api/annotations.proto";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {
        option (google.api.http) = {
            post: "/v1/greeter/sayhello",
            body: "*"
        };
        //    option (google.api.http) = {
        //      get: "/v1/greeter/sayhello",
        //    };
    }
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}
/*
protoc --proto_path=./proto \
   --go_out=./proto --go_opt=paths=source_relative \
   --go-grpc_out=./proto --go-grpc_opt=paths=source_relative \
   --grpc-gateway_out=./proto --grpc-gateway_opt=paths=source_relative \
   ./proto/helloworld/hello_world.proto
*/
// protoc --proto_path=. --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative --grpc-gateway_out=. --grpc-gateway_opt=paths=source_relative *.proto